--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <section id="history">
       <div class="container">
         <h3>Our History</h3>
-        <p>Music Instruments was founded in 1985 by John Smith, a passionate musician who wanted to help others find the perfect instrument. What started as a small shop has grown into a thriving business with multiple locations across the country.</p>
+        <p>Music Instruments was founded in 2017 by Brian Kimathi, a passionate musician who wanted to help others find the perfect instrument. What started as a small shop has grown into a thriving business with multiple locations across the country.</p>
         <p>We take pride in our knowledgeable staff, who are all musicians themselves and are dedicated to helping our customers find the perfect instrument. Whether you're a beginner or a seasoned professional, we have the expertise to help you find what you're looking for.</p>
       </div>
     </section>
@@ -50,17 +50,17 @@
       <div class="container">
         <h3>Meet Our Team</h3>
         <div class="person">
-          <img src="/home/kimathi/Pictures/Screenshots/p001.png" alt="Brian Kimathi">
+          <img src="p001.png" alt="Brian Kimathi">
           <h4>Brian Kimathi</h4>
           <p>Founder and CEO</p>
         </div>
         <div class="person">
-            <img src="/home/kimathi/Pictures/Screenshots/p002.png" alt="Tracy Kawira">
+            <img src="p002.png" alt="Tracy Kawira">
           <h4>Tracy Kawira</h4>
           <p>Sales Manager</p>
         </div>
         <div class="person">
-            <img src="/home/kimathi/Pictures/Screenshots/p004.png" alt="Mark Chain">
+            <img src="p004.png" alt="Mark Chain">
           <h4>Mark Chain</h4>
           <p>Product Specialist</p>
         </div>
