--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Music Instruments | About Us</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -8,8 +9,8 @@
     <header>
       <div class="container">
         <nav>
+          <a href="index.html"><img class="logo"  src="https://assets.onbuy.com/i25/product/dd9401b3d4bb486aaf7b97054d2c1502-l16703949/small-cherry-red-apex-legends-distressed-symbol-logo-mens-t-shirt-7730762.jpg" alt="Music Instruments Logo"></a>
           <ul>
-            <li><a href="index.html"><img class="logo"  src="https://assets.onbuy.com/i25/product/dd9401b3d4bb486aaf7b97054d2c1502-l16703949/small-cherry-red-apex-legends-distressed-symbol-logo-mens-t-shirt-7730762.jpg" alt="Music Instruments Logo"></a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li class="active"><a href="#">About</a></li>
@@ -46,9 +47,12 @@
       </div>
     </section>
 
-    <section id="team">
+    <section>
       <div class="container">
         <h3>Meet Our Team</h3>
+      </div>
+      <div id="team">
+
         <div class="person">
           <img src="p001.png" alt="Brian Kimathi">
           <h4>Brian Kimathi</h4>
@@ -64,7 +68,7 @@
           <h4>Mark Chain</h4>
           <p>Product Specialist</p>
         </div>
-      </div>
+      
     </section>
 
     <footer>
