--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Music Instruments | Home</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <div class="container">
+        <a href="index.html"><img class="logo"  src="https://assets.onbuy.com/i25/product/dd9401b3d4bb486aaf7b97054d2c1502-l16703949/small-cherry-red-apex-legends-distressed-symbol-logo-mens-t-shirt-7730762.jpg" alt="Music Instruments Logo">
         <nav>
           <ul>
-            <li><a href="index.html"><img class="logo"  src="https://assets.onbuy.com/i25/product/dd9401b3d4bb486aaf7b97054d2c1502-l16703949/small-cherry-red-apex-legends-distressed-symbol-logo-mens-t-shirt-7730762.jpg" alt="Music Instruments Logo"></a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
+            <li><a href="#index.html">Home</a></li>
+            <li><a href="products.html" target="_parent" >Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
