--- a/products.html
+++ b/products.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Instrument Store | Product Page</title>
     <link rel="stylesheet" href="style.css">
-</head>
-
 <body>
     <header>
         <div class="container">
             <nav>
+                <a href="index.html"><img class="logo"  src="https://assets.onbuy.com/i25/product/dd9401b3d4bb486aaf7b97054d2c1502-l16703949/small-cherry-red-apex-legends-distressed-symbol-logo-mens-t-shirt-7730762.jpg" alt="Music Instruments Logo"></a>
                 <ul>
-                    <li><a href="index.html"><img class="logo"  src="https://assets.onbuy.com/i25/product/dd9401b3d4bb486aaf7b97054d2c1502-l16703949/small-cherry-red-apex-legends-distressed-symbol-logo-mens-t-shirt-7730762.jpg" alt="Music Instruments Logo"></a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="about.html">About</a></li>
