--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="index.html"><img class="logo"  src="https://assets.onbuy.com/i25/product/dd9401b3d4bb486aaf7b97054d2c1502-l16703949/small-cherry-red-apex-legends-distressed-symbol-logo-mens-t-shirt-7730762.jpg" alt="Music Instruments Logo">
         <nav>
           <ul>
-            <li><a href="#index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html" target="_parent" >Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
