--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="products.html" target="_parent" >Products</a></li>
+            <li><a href="products.html" target="_top" >Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
