--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,50 @@
     <meta charset="utf-8">
     <title>Music Instruments | Contact Us</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript">
+  function validate() {
+    var name = document.getElementById('mail-name').value;
+    var email = document.getElementById('mail-email').value;
+    var subject = document.getElementById('mail-subject').value;
+    var message = document.getElementById('mail-message').value;
+
+    var nameRegex = /^[A-Za-z]+$/;
+    var emailRegex = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+
+    var isValid = true;
+
+    // Resetting previous validation errors
+    document.querySelector('.errorName').style.display = 'none';
+    document.querySelector('.errorEmail').style.display = 'none';
+
+    // Name validation
+    if (!name || !email || !subject || !massage){
+      alert("Please fill in all fields");
+      isValid = false;
+    }
+    if (!name) {
+      document.querySelector('.errorName').style.display = 'block';
+      alert("Please enter your name");
+      isValid = false;
+    } else if (!nameRegex.test(name)) {
+      document.querySelector('.errorName').style.display = 'block';
+      alert("Enter a valid name");
+      isValid = false;
+    }
+
+    // Email validation
+    if (!email) {
+      document.querySelector('.errorEmail').style.display = 'block';
+      alert("Please enter your email address");
+      isValid = false;
+    } else if (!emailRegex.test(email)) {
+      document.querySelector('.errorEmail').style.display = 'block';
+      isValid = false;
+    }
+
+    return isValid;
+  }
+</script>
   </head>
   <body>
     <section id="hero">
@@ -12,24 +56,32 @@
         <p>Have a question, comment, or concern? Let us know!</p>
       </div>
     </section>
-    
+
     <section id="contact-form">
       <div class="container">
         <h3>Get In Touch</h3>
-        <form>
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" placeholder="Enter your name" required>
+        <form id="myform" onsubmit="return validate()" method="POST" action="cont.html">
+          <label for="name">Firstname</label>
+          <input type="text" id="mail-name" name="name" placeholder="Enter your name">
+          <p class="errorName">Enter a valid name</p>
+          <label for="name">Lastname</label>
+          <input type="text" id="mail-name" name="name" placeholder="Enter your name">
+          <p class="errorName">Enter a valid name</p>
+
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder="Enter your email" required>
+          <input type="email" id="mail-email" name="email" placeholder="Enter your email">
+          <p class="errorEmail">Enter a valid email address</p>
+
           <label for="subject">Subject</label>
-          <input type="text" id="subject" name="subject" placeholder="Enter your subject" required>
+          <input type="text" id="mail-subject" name="subject" placeholder="Enter your subject">
           <label for="message">Message</label>
-          <textarea id="message" name="message" placeholder="Enter your message" required></textarea>
-          <button type="submit" class="btn">Send</button>
+
+          <textarea id="mail-message" name="message" placeholder="Enter your message"></textarea>
+          <button id="mail-submit" type="submit" class="btn">Send</button>
         </form>
       </div>
     </section>
-    
+
     <section id="contact-info">
       <div class="container">
         <h3>Contact Information</h3>
@@ -58,3 +110,4 @@
     </footer>
   </body>
 </html>
+
